fix: remove z-index

--- a/src/Components/ItineraryCard/ItineraryCard.css
+++ b/src/Components/ItineraryCard/ItineraryCard.css
@@ -22,7 +22,6 @@
     width: 100%;
     height: 106px;
     margin: 0 14px 0 14px;
-    z-index: 1;
 
     display: flex;
     flex-direction: column;
